# deeplearning-dot-ai

./: README.md  justfile  pyproject.toml  requirements.txt
notebooks/: L1_Multi-Agent_Conversation_and_Stand-up_Comedy-fail-looping.txt  L1_Multi-Agent_Conversation_and_Stand-up_Comedy.FAIL-repeat-maxturns1.txt  L2_Sequential_Chats_and_Customer_Onboarding.ipynb  L3_Reflection_and_Blogpost_Writing.ipynb  L4_Tool_Use_and_Conversational_Chess.ipynb  L5_Coding_and_Financial_Analysis.ipynb  L6-Planning_and_Stock_Report_Generation.ipynb
notebooks/agentic-ai/: L1_Multi-Agent_Conversation_and_Stand-up_Comedy.ipynb
notebooks/carbon/: L2_Explore_Carbon_Intensity.ipynb
src/deeplearning_dot_ai/: utils.py
