[project]
name = "deeplearning-dot-ai"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Michael Booth", email = "michael@databooth.com.au"},
]
dependencies = [
    "python-dotenv>=1.0.1",
    "notebook>=7.2.0",
    "pyautogen>=0.2.28",
    "openai>=1.30.5",
]
requires-python = ">=3.11.9,<3.13"

readme = "README.md"
license = {text = "DataBooth"}


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
linter = [
    "black[jupyter]>=24.4.2",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
