[project]
name = "deeplearning-dot-ai"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Michael Booth", email = "michael@databooth.com.au"},
]
dependencies = [
    "python-dotenv>=1.0.1",
    "pyautogen>=0.2.28",
    "notebook>=7.2.0",
    "openai>=1.30.5",
]
requires-python = "<3.12,>=3.11"
readme = "README.md"
license = {text = "DataBooth"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
lint = [
    "black[jupyter]>=24.4.2",
]
